- Improves docstrings - Moves test dependencies to `test-requirements.txt` - Fixes unit test name

--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,7 @@ passenv =
 [testenv:fmt]
 description = Apply coding style standards to code
 deps =
-    black
-    isort
+    -r{toxinidir}/test-requirements.txt
 commands =
     isort {[vars]all_path}
     black {[vars]all_path}
@@ -34,12 +33,7 @@ commands =
 [testenv:lint]
 description = Check code against coding style standards
 deps =
-    black
-    flake8-docstrings
-    flake8-builtins
-    pyproject-flake8
-    pep8-naming
-    isort
+    -r{toxinidir}/test-requirements.txt
 commands =
     pflake8 {[vars]all_path}
     isort --check-only --diff {[vars]all_path}
@@ -48,14 +42,8 @@ commands =
 [testenv:static]
 description = Run static analysis checks
 deps =
+    -r{toxinidir}/test-requirements.txt
     -r{toxinidir}/requirements.txt
-    mypy
-    types-PyYAML
-    pytest
-    pytest-operator
-    juju
-    types-setuptools
-    types-toml
 setenv =
     PYTHONPATH = ""
 commands =
@@ -64,8 +52,7 @@ commands =
 [testenv:unit]
 description = Run unit tests
 deps =
-    pytest
-    coverage[toml]
+    -r{toxinidir}/test-requirements.txt
     -r{toxinidir}/requirements.txt
 commands =
     coverage run --source={[vars]src_path} -m pytest {[vars]unit_test_path} -v --tb native -s {posargs}
@@ -74,9 +61,7 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    pytest
-    juju<3.1
-    pytest-operator
+    -r{toxinidir}/test-requirements.txt
     -r{toxinidir}/requirements.txt
 commands =
     pytest --asyncio-mode=auto -v --tb native {[vars]integration_test_path} --log-cli-level=INFO -s {posargs}
