Fixes charm name in CI workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
         if: ${{ github.ref_name == 'main' }}
         with:
           name: tested-charm
-          path: .tox/**/charmed-5g-nrf_ubuntu-22.04-amd64.charm
+          path: .tox/**/sdcore-nrf_ubuntu-22.04-amd64.charm
           retention-days: 5
       - name: Archive charmcraft logs
         if: failure()
@@ -87,7 +87,7 @@ jobs:
         with:
           name: tested-charm
       - name: Move charm in current directory
-        run: find ./ -name charmed-5g-nrf_ubuntu-22.04-amd64.charm -exec mv -t ./ {} \;
+        run: find ./ -name sdcore-nrf_ubuntu-22.04-amd64.charm -exec mv -t ./ {} \;
       - name: Select Charmhub channel
         uses: canonical/charming-actions/channel@2.2.5
         id: channel
