--- a/.github/workflows/publish-lib.yaml
+++ b/.github/workflows/publish-lib.yaml
@@ -1,9 +1,10 @@
-name: Publish fiveg_nrf lib
+name: Publish Library
 
 on:
-  push:
-    branches:
-      - "main"
+  workflow_call:
+    secrets:
+      CHARMCRAFT_AUTH:
+        required: true
 
 jobs:
   publish:
@@ -14,14 +15,7 @@ jobs:
       - name: Select Charmhub channel
         uses: canonical/charming-actions/channel@2.2.5
         id: channel
-      - uses: canonical/charming-actions/upload-charm@2.2.5
-        with:
-          credentials: "${{ secrets.CHARMCRAFT_AUTH }}"
-          upload-image: "false"
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-          channel: "${{ steps.channel.outputs.name }}"
-
-      - name: Publish lib
+      - name: Publish NRF lib
         env:
           CHARMCRAFT_AUTH: "${{ secrets.CHARMCRAFT_AUTH }}"
         run: |
