Archives tested charm

--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -21,6 +21,13 @@ jobs:
           channel: 1.27-strict/stable
       - name: Run integration tests
         run: tox -vve integration
+      - name: Archive Tested Charm
+        uses: actions/upload-artifact@v3
+        if: ${{ github.ref_name == 'main' }}
+        with:
+          name: tested-charm
+          path: .tox/**/sdcore-nrf_ubuntu-22.04-amd64.charm
+          retention-days: 5
       - name: Archive charmcraft logs
         if: failure()
         uses: actions/upload-artifact@v3
