--- a/.github/workflows/publish-lib.yaml
+++ b/.github/workflows/publish-lib.yaml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-22.04
     name: Charmhub upload orc8r-libs
     steps:
-      - uses: actions/checkout@v3
-      - name: Select Charmhub channel
-        uses: canonical/charming-actions/channel@2.2.5
-        id: channel
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install charmcraft
+        run: sudo snap install charmcraft --classic
       - name: Publish NRF lib
         env:
           CHARMCRAFT_AUTH: "${{ secrets.CHARMCRAFT_AUTH }}"
