--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,9 @@ storage:
 requires:
   database:
     interface: mongodb_client
+provides:  
+  fiveg-nrf:
+    interface: fiveg-nrf
 
 assumes:
   - k8s-api
