Changes 5G and SDCORE to SD-Core

--- a/tests/unit/charms/sdcore_nrf/v0/dummy_provider_charm/metadata.yaml
+++ b/tests/unit/charms/sdcore_nrf/v0/dummy_provider_charm/metadata.yaml
@@ -4,9 +4,9 @@
 name: fiveg-nrf-provider
 
 description: |
-  Dummy 5G NRF provider charm.
+  Dummy SD-Core NRF provider charm.
 summary: |
-  Dummy 5G NRF provider charm.
+  Dummy SD-Core NRF provider charm.
 
 provides:
   fiveg-nrf:
