--- a/tests/unit/expected_config/config.conf
+++ b/tests/unit/expected_config/config.conf
@@ -10,7 +10,7 @@ configuration:
   sbi:
     bindingIPv4: 0.0.0.0
     port: 29510
-    registerIPv4: nrf
+    registerIPv4: 1.1.1.1
     scheme: http
   serviceNameList:
   - nnrf-nfm
