--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ allowlist_externals = /usr/bin/env
 [testenv:unit]
 description = Run unit tests
 commands =
-    coverage run --source={[vars]src_path} -m pytest {[vars]unit_test_path} -v --tb native -s {posargs}
+    coverage run --source={[vars]src_path},{[vars]lib_path} -m pytest {[vars]unit_test_path} -v --tb native -s {posargs}
     coverage report
 
 [testenv:integration]
